[gd_scene load_steps=49 format=3 uid="uid://dcksprsjtjgq0"]

[ext_resource type="Script" path="res://Combat/enemy.gd" id="1_k00uk"]
[ext_resource type="Texture2D" uid="uid://cn8i0jm1jf1mi" path="res://Assets/Enemy/Attack-01/Attack-01-Sheet.png" id="2_r4o7l"]
[ext_resource type="Texture2D" uid="uid://d2ny7ovanvwsk" path="res://Assets/Enemy/Jumlp-All/Jump-All-Sheet.png" id="3_x6da5"]
[ext_resource type="Texture2D" uid="uid://cbcf0p5eevilf" path="res://Assets/Enemy/Dead/Dead-Sheet.png" id="3_yxh75"]
[ext_resource type="Texture2D" uid="uid://bxcgmtu2sq84q" path="res://Assets/Enemy/Idle/Idle-Sheet.png" id="4_b6rkv"]
[ext_resource type="Texture2D" uid="uid://5twbqs3y8gp" path="res://Assets/Enemy/Run/Run-Sheet.png" id="5_svxsv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ckyu7"]
size = Vector2(20, 48)

[sub_resource type="Animation" id="Animation_qt38g"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_nb1xx"]
resource_name = "attack1"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"attack1"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_tw8ub"]
resource_name = "hit"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"hit"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_rx60r"]
resource_name = "idle"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_tl35o"]
resource_name = "run"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"run"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_r11cu"]
resource_name = "death"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"death"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jcmju"]
_data = {
"RESET": SubResource("Animation_qt38g"),
"attack1": SubResource("Animation_nb1xx"),
"death": SubResource("Animation_r11cu"),
"hit": SubResource("Animation_tw8ub"),
"idle": SubResource("Animation_rx60r"),
"run": SubResource("Animation_tl35o")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_bnygy"]
atlas = ExtResource("2_r4o7l")
region = Rect2(0, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_2kals"]
atlas = ExtResource("2_r4o7l")
region = Rect2(96, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_0c5te"]
atlas = ExtResource("2_r4o7l")
region = Rect2(192, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_yc342"]
atlas = ExtResource("2_r4o7l")
region = Rect2(288, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ooo5"]
atlas = ExtResource("2_r4o7l")
region = Rect2(384, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_vjqta"]
atlas = ExtResource("2_r4o7l")
region = Rect2(480, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_g5rwx"]
atlas = ExtResource("2_r4o7l")
region = Rect2(576, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ow4t"]
atlas = ExtResource("2_r4o7l")
region = Rect2(672, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ac0kq"]
atlas = ExtResource("3_yxh75")
region = Rect2(0, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_c0lms"]
atlas = ExtResource("3_yxh75")
region = Rect2(80, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2tp7q"]
atlas = ExtResource("3_yxh75")
region = Rect2(160, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ws6vk"]
atlas = ExtResource("3_yxh75")
region = Rect2(240, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_p40pr"]
atlas = ExtResource("3_yxh75")
region = Rect2(320, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0pxyg"]
atlas = ExtResource("3_yxh75")
region = Rect2(400, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bf3jr"]
atlas = ExtResource("3_yxh75")
region = Rect2(480, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_112ac"]
atlas = ExtResource("3_yxh75")
region = Rect2(560, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bpof4"]
atlas = ExtResource("3_x6da5")
region = Rect2(768, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rnxqx"]
atlas = ExtResource("4_b6rkv")
region = Rect2(0, 0, 64, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_1emlb"]
atlas = ExtResource("4_b6rkv")
region = Rect2(64, 0, 64, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_2llq5"]
atlas = ExtResource("4_b6rkv")
region = Rect2(128, 0, 64, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_hqok2"]
atlas = ExtResource("4_b6rkv")
region = Rect2(192, 0, 64, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_gd6ab"]
atlas = ExtResource("5_svxsv")
region = Rect2(0, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_cx131"]
atlas = ExtResource("5_svxsv")
region = Rect2(80, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_j6vqs"]
atlas = ExtResource("5_svxsv")
region = Rect2(160, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_s5e40"]
atlas = ExtResource("5_svxsv")
region = Rect2(240, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_aejbn"]
atlas = ExtResource("5_svxsv")
region = Rect2(320, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ueqk2"]
atlas = ExtResource("5_svxsv")
region = Rect2(400, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_u07gr"]
atlas = ExtResource("5_svxsv")
region = Rect2(480, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_w2aas"]
atlas = ExtResource("5_svxsv")
region = Rect2(560, 0, 80, 80)

[sub_resource type="SpriteFrames" id="SpriteFrames_sgtoa"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bnygy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2kals")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0c5te")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yc342")
}],
"loop": true,
"name": &"attack1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ooo5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vjqta")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g5rwx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ow4t")
}],
"loop": true,
"name": &"attack2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ac0kq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c0lms")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2tp7q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ws6vk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p40pr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0pxyg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bf3jr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_112ac")
}],
"loop": true,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bpof4")
}],
"loop": true,
"name": &"hit",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rnxqx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1emlb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2llq5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hqok2")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gd6ab")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cx131")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j6vqs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s5e40")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aejbn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ueqk2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u07gr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w2aas")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g3al4"]
size = Vector2(256, 20)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_apjq3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wpawc"]
size = Vector2(12, 40)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8jjqs"]
size = Vector2(80, 32)

[node name="Enemy" type="CharacterBody2D"]
scale = Vector2(2, 2)
collision_layer = 4
script = ExtResource("1_k00uk")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_ckyu7")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_jcmju")
}

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_sgtoa")
animation = &"attack1"
autoplay = "idle"
frame = 1

[node name="PlayerDetectionArea" type="Area2D" parent="."]
collision_layer = 128
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetectionArea"]
shape = SubResource("RectangleShape2D_g3al4")

[node name="Healthbar" type="ProgressBar" parent="."]
modulate = Color(0.670588, 0, 1, 0.701961)
offset_left = -16.0
offset_top = 24.5
offset_right = 197.0
offset_bottom = 44.5
scale = Vector2(0.15, 0.15)
theme_override_styles/fill = SubResource("StyleBoxFlat_apjq3")
max_value = 20.0
show_percentage = false

[node name="AttackArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2(33, 0)
shape = SubResource("RectangleShape2D_wpawc")

[node name="AttackDetectionArea" type="Area2D" parent="."]
collision_layer = 128
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackDetectionArea"]
shape = SubResource("RectangleShape2D_8jjqs")

[node name="AttackCooldownTimer" type="Timer" parent="."]
one_shot = true

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="body_entered" from="PlayerDetectionArea" to="." method="_on_player_detection_area_body_entered"]
[connection signal="body_entered" from="AttackDetectionArea" to="." method="_on_attack_detection_area_body_entered"]
[connection signal="timeout" from="AttackCooldownTimer" to="." method="_on_attack_cooldown_timer_timeout"]
